# yoloboy-SCHOLAR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  file_extract.py  llm.py  main.py
backend/app/agents/: __init__.py  application_agent.py  base.py  discovery_agent.py  eligibility_agent.py  match_agent.py  orchestrator.py  profile_agent.py  tracker_agent.py
backend/app/api/: routes.py
backend/app/graph/: __init__.py  workflow.py
backend/app/knowledge/: __init__.py  opportunity_store.py
backend/app/models/: __init__.py  application.py  eligibility.py  match.py  opportunity.py  profile.py  tracker.py
backend/app/state/: __init__.py  session_state.py
backend/scholarai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_application_agent.py  test_discovery_agent.py  test_eligibility_agent.py  test_file_extract.py  test_match_agent.py  test_orchestrator.py  test_profile_agent.py  test_tracker_agent.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SUBMISSION.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: EligibilityBadge.jsx  MatchScore.jsx  NarrationStream.jsx  OpportunityCard.jsx  ProfileSummaryCard.jsx
frontend/src/screens/: AgentConsole.jsx  ApplicationWorkspace.jsx  ProfileUpload.jsx
