[project]
name = "scholarai"
version = "0.1.0"
description = "Autonomous Scholarship & Internship Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-google-genai>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-groq>=0.2",
    "langchain-community>=0.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]